[package]
name = "fuse_example"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
fuser = "0.16.0"
libc = "0.2.177"
rusqlite = { version = "0.37.0", features = ["bundled"] }
uuid = { version = "1.10.0", features = ["v4"] }
chrono = { version = "0.4.42", features = ["serde"] }
chrono-tz = "0.10"
serde = "1.0.228"
